<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_t2"
    tools:context=".LoginVakna">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_seta_lv"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:background="@drawable/back_btn_arrow1"
        android:drawableRight="@drawable/icon_arrow"
        android:padding="10dp"
        android:text="@string/ponto1_lv"
        android:textColor="@color/branco_k"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo_lv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_logo_lv" />

    <ImageView
        android:id="@+id/img_logo_lv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_branca" />

    <TextView
        android:id="@+id/text_login_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chau_philomene_one"
        android:text="Login"
        android:textColor="@color/branco_k"
        android:textSize="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_lv" />

    <View
        android:id="@+id/view_container_lv"
        style="@style/ContainerComponents_t2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/edit_email_lv"
        android:inputType="textEmailAddress"
        style="@style/EditText_Branco"
        android:hint="Email:"
        android:fontFamily="@font/chau_philomene_one"
        android:textSize="20sp"
        android:drawableRight="@drawable/icon_email"
        app:layout_constraintStart_toStartOf="@+id/view_container_lv"
        app:layout_constraintEnd_toEndOf="@id/view_container_lv"
        app:layout_constraintTop_toTopOf="@id/view_container_lv" />

    <EditText
        android:id="@+id/edit_senha_lv"
        android:inputType="textPassword"
        style="@style/EditText_Branco"
        android:hint="Senha:"
        android:fontFamily="@font/chau_philomene_one"
        android:textSize="20sp"
        android:drawableRight="@drawable/icon_eye"
        app:layout_constraintStart_toStartOf="@+id/view_container_lv"
        app:layout_constraintEnd_toEndOf="@id/view_container_lv"
        app:layout_constraintTop_toBottomOf="@id/edit_email_lv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar_lv"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:background="@drawable/back_btn_marrom"
        android:fontFamily="@font/chau_philomene_one"
        android:padding="5dp"
        android:text="@string/Logar_lv"
        android:textAllCaps="false"
        android:textColor="@color/branco_k"
        android:textSize="25sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_senha_lv"
        app:layout_constraintEnd_toEndOf="@+id/view_container_lv"
        app:layout_constraintStart_toStartOf="@id/view_container_lv" />

    <TextView
        android:id="@+id/text_possui_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chau_philomene_one"
        android:text="Ainda não possui um login?"
        android:textColor="@color/marrom_1"
        android:textSize="25dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_container_lv"
        app:layout_constraintEnd_toEndOf="@+id/view_container_lv"
        app:layout_constraintStart_toStartOf="@+id/view_container_lv"
         />

    <TextView
        android:id="@+id/text_realizar_cadastro_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chau_philomene_one"
        android:text="@string/text_cadastrar_lv"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@id/view_container_lv"
        app:layout_constraintStart_toStartOf="@+id/view_container_lv"
        app:layout_constraintTop_toBottomOf="@+id/text_possui_lv" />

    <View
        android:id="@+id/view_sublin_lv"
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text_realizar_cadastro_lv"
        app:layout_constraintEnd_toEndOf="@+id/view_container_lv"
        app:layout_constraintStart_toStartOf="@+id/view_container_lv" />

</androidx.constraintlayout.widget.ConstraintLayout>